--- a/package.json
+++ b/package.json
@@ -5,11 +5,17 @@
         "dev": "webpack-dev-server"
     },
     "devDependencies": {
+        "autoprefixer": "^9.7.6",
+        "css-loader": "^3.5.3",
         "html-webpack-plugin": "^4.3.0",
+        "mini-css-extract-plugin": "^0.9.0",
+        "optimize-css-assets-webpack-plugin": "^5.0.3",
+        "postcss": "^7.0.27",
+        "postcss-loader": "^3.0.0",
+        "style-loader": "^1.2.1",
+        "uglifyjs-webpack-plugin": "^2.2.0",
         "webpack": "^4.43.0",
-        "webpack-cli": "^3.3.11"
-    },
-    "dependencies": {
+        "webpack-cli": "^3.3.11",
         "webpack-dev-server": "^3.10.3"
     }
 }
